still having contrast issues

--- a/final/styles/small.css
+++ b/final/styles/small.css
@@ -38,13 +38,13 @@ nav button {
     margin-left: -2px;
     background: var(--color7);
     border: 1px solid var(--color1);
-    color: var(--color2);
+    color: var(--color1);
     font-weight: bold;
     font-size: 2rem;
     padding-left: 4px;
 }
 nav {
-    background-color: var(--color8);
+    background-color: var(--color1);
 }
 nav ul {
     padding: 0;
@@ -62,17 +62,18 @@ nav ul li a {
     display: block;
     padding: .8rem 2vw;
     text-decoration: none;
-    color: var(--color2);
+    color: white;
     font-weight: bold;
 }
 nav ul li.active a {
-    background-color: var(--color1);
-    color: white;
+    background-color: var(--color2);
+    color: black;
+   
 }
 
 nav a:hover {
-    color: white;
-    background-color: var(--color4);
+    color: var(--color1);
+    background-color: var(--color9);
     border-top: 3px solid red;
     border-bottom: 3px solid red;
 }
@@ -303,6 +304,7 @@ th[scope='col'],
     width: 200px;
     padding: 5px;
     margin-top: 5px;
+    box-shadow: 0 0 0 2px rgba(255, 0, 0, 0.501)
 }
 
 .email-phone-map {
